tests/valid/minimal-comp.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="minimal-comp-test">
  <comp name="x"/>
</hcdf>
